--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -63,162 +63,162 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1743</th>\n",
-       "      <td>Love And Pride</td>\n",
-       "      <td>King</td>\n",
-       "      <td>spotify:track:2HrAvfx1IQcuGN2k6misBO</td>\n",
-       "      <td>0.755</td>\n",
-       "      <td>0.438</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-13.623</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0330</td>\n",
-       "      <td>0.0498</td>\n",
-       "      <td>0.000003</td>\n",
-       "      <td>0.0719</td>\n",
-       "      <td>0.766</td>\n",
-       "      <td>126.015</td>\n",
-       "      <td>200280</td>\n",
-       "      <td>4</td>\n",
-       "      <td>34.91387</td>\n",
-       "      <td>10</td>\n",
+       "      <th>21182</th>\n",
+       "      <td>(Hey Ho) The Noddy (Oh)</td>\n",
+       "      <td>Current 93</td>\n",
+       "      <td>spotify:track:69Br4GdsJCP3oyWt5Ihmc3</td>\n",
+       "      <td>0.474</td>\n",
+       "      <td>0.102</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-14.664</td>\n",
        "      <td>1</td>\n",
-       "      <td>80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1422</th>\n",
-       "      <td>Señor Abogado</td>\n",
-       "      <td>Aldo Monges</td>\n",
-       "      <td>spotify:track:57cAXZqm834PazTlVqLIUd</td>\n",
-       "      <td>0.668</td>\n",
-       "      <td>0.307</td>\n",
-       "      <td>6</td>\n",
-       "      <td>-11.328</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0348</td>\n",
-       "      <td>0.4350</td>\n",
+       "      <td>0.0515</td>\n",
+       "      <td>0.9560</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.1660</td>\n",
-       "      <td>0.548</td>\n",
-       "      <td>104.822</td>\n",
-       "      <td>154187</td>\n",
-       "      <td>4</td>\n",
-       "      <td>29.96956</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5459</th>\n",
-       "      <td>Santa Evita - Original Cast Recording/1979</td>\n",
-       "      <td>Mandy Patinkin</td>\n",
-       "      <td>spotify:track:4ZfvTohcbwFwrbfnGuZu8H</td>\n",
-       "      <td>0.291</td>\n",
-       "      <td>0.176</td>\n",
+       "      <td>0.3300</td>\n",
+       "      <td>0.415</td>\n",
+       "      <td>99.535</td>\n",
+       "      <td>104173</td>\n",
+       "      <td>3</td>\n",
+       "      <td>43.54332</td>\n",
        "      <td>5</td>\n",
-       "      <td>-18.619</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0455</td>\n",
-       "      <td>0.8420</td>\n",
-       "      <td>0.000003</td>\n",
-       "      <td>0.1860</td>\n",
-       "      <td>0.354</td>\n",
-       "      <td>124.847</td>\n",
-       "      <td>123693</td>\n",
-       "      <td>4</td>\n",
-       "      <td>18.66831</td>\n",
-       "      <td>7</td>\n",
        "      <td>0</td>\n",
-       "      <td>70</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4710</th>\n",
-       "      <td>My Special Prayer</td>\n",
-       "      <td>Percy Sledge</td>\n",
-       "      <td>spotify:track:4c7nlEgK2uiM3ofjaRD51x</td>\n",
-       "      <td>0.558</td>\n",
-       "      <td>0.412</td>\n",
-       "      <td>7</td>\n",
-       "      <td>-9.290</td>\n",
+       "      <th>16799</th>\n",
+       "      <td>The Torture Garden</td>\n",
+       "      <td>Death In June</td>\n",
+       "      <td>spotify:track:6fL8R4ESyfV3dnhk2GOYNS</td>\n",
+       "      <td>0.158</td>\n",
+       "      <td>0.431</td>\n",
+       "      <td>10</td>\n",
+       "      <td>-11.109</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0233</td>\n",
-       "      <td>0.7130</td>\n",
-       "      <td>0.000061</td>\n",
-       "      <td>0.1290</td>\n",
-       "      <td>0.639</td>\n",
-       "      <td>97.363</td>\n",
-       "      <td>185493</td>\n",
-       "      <td>4</td>\n",
-       "      <td>26.10163</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6714</th>\n",
-       "      <td>A Lifetime Of Loneliness</td>\n",
-       "      <td>Jackie DeShannon</td>\n",
-       "      <td>spotify:track:6Jx6jy5B6ATD4wkWAYGR0f</td>\n",
-       "      <td>0.406</td>\n",
-       "      <td>0.338</td>\n",
-       "      <td>5</td>\n",
-       "      <td>-6.535</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0260</td>\n",
-       "      <td>0.8160</td>\n",
-       "      <td>0.000007</td>\n",
+       "      <td>0.0347</td>\n",
+       "      <td>0.9250</td>\n",
+       "      <td>0.166000</td>\n",
        "      <td>0.1150</td>\n",
-       "      <td>0.459</td>\n",
-       "      <td>90.318</td>\n",
-       "      <td>157267</td>\n",
+       "      <td>0.106</td>\n",
+       "      <td>179.446</td>\n",
+       "      <td>371293</td>\n",
        "      <td>4</td>\n",
-       "      <td>29.29180</td>\n",
+       "      <td>33.69942</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29441</th>\n",
+       "      <td>Kanulu Palikey</td>\n",
+       "      <td>Karthik</td>\n",
+       "      <td>spotify:track:49hiYhUQXEMqkZz031DQHq</td>\n",
+       "      <td>0.754</td>\n",
+       "      <td>0.697</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-8.942</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0321</td>\n",
+       "      <td>0.0767</td>\n",
+       "      <td>0.000553</td>\n",
+       "      <td>0.2500</td>\n",
+       "      <td>0.706</td>\n",
+       "      <td>129.949</td>\n",
+       "      <td>262956</td>\n",
+       "      <td>4</td>\n",
+       "      <td>50.98220</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17800</th>\n",
+       "      <td>I Told You So</td>\n",
+       "      <td>Randy Travis</td>\n",
+       "      <td>spotify:track:6QUEB3DDAD7oJhbIZF2v4Y</td>\n",
+       "      <td>0.615</td>\n",
+       "      <td>0.347</td>\n",
        "      <td>9</td>\n",
+       "      <td>-9.596</td>\n",
        "      <td>1</td>\n",
-       "      <td>60</td>\n",
+       "      <td>0.0259</td>\n",
+       "      <td>0.1820</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.1250</td>\n",
+       "      <td>0.273</td>\n",
+       "      <td>78.994</td>\n",
+       "      <td>219507</td>\n",
+       "      <td>4</td>\n",
+       "      <td>59.85929</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23770</th>\n",
+       "      <td>Harmageddon</td>\n",
+       "      <td>Apocalyptica</td>\n",
+       "      <td>spotify:track:4mDSLI5UtU0xJoqaqPp1UB</td>\n",
+       "      <td>0.205</td>\n",
+       "      <td>0.581</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-8.092</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0434</td>\n",
+       "      <td>0.0699</td>\n",
+       "      <td>0.854000</td>\n",
+       "      <td>0.0807</td>\n",
+       "      <td>0.169</td>\n",
+       "      <td>84.302</td>\n",
+       "      <td>296200</td>\n",
+       "      <td>4</td>\n",
+       "      <td>13.51356</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                           track            artist  \\\n",
-       "1743                              Love And Pride              King   \n",
-       "1422                               Señor Abogado       Aldo Monges   \n",
-       "5459  Santa Evita - Original Cast Recording/1979    Mandy Patinkin   \n",
-       "4710                           My Special Prayer      Percy Sledge   \n",
-       "6714                    A Lifetime Of Loneliness  Jackie DeShannon   \n",
+       "                         track         artist  \\\n",
+       "21182  (Hey Ho) The Noddy (Oh)     Current 93   \n",
+       "16799       The Torture Garden  Death In June   \n",
+       "29441           Kanulu Palikey        Karthik   \n",
+       "17800            I Told You So   Randy Travis   \n",
+       "23770              Harmageddon   Apocalyptica   \n",
        "\n",
-       "                                       uri  danceability  energy  key  \\\n",
-       "1743  spotify:track:2HrAvfx1IQcuGN2k6misBO         0.755   0.438    9   \n",
-       "1422  spotify:track:57cAXZqm834PazTlVqLIUd         0.668   0.307    6   \n",
-       "5459  spotify:track:4ZfvTohcbwFwrbfnGuZu8H         0.291   0.176    5   \n",
-       "4710  spotify:track:4c7nlEgK2uiM3ofjaRD51x         0.558   0.412    7   \n",
-       "6714  spotify:track:6Jx6jy5B6ATD4wkWAYGR0f         0.406   0.338    5   \n",
+       "                                        uri  danceability  energy  key  \\\n",
+       "21182  spotify:track:69Br4GdsJCP3oyWt5Ihmc3         0.474   0.102    3   \n",
+       "16799  spotify:track:6fL8R4ESyfV3dnhk2GOYNS         0.158   0.431   10   \n",
+       "29441  spotify:track:49hiYhUQXEMqkZz031DQHq         0.754   0.697    7   \n",
+       "17800  spotify:track:6QUEB3DDAD7oJhbIZF2v4Y         0.615   0.347    9   \n",
+       "23770  spotify:track:4mDSLI5UtU0xJoqaqPp1UB         0.205   0.581    9   \n",
        "\n",
-       "      loudness  mode  speechiness  acousticness  instrumentalness  liveness  \\\n",
-       "1743   -13.623     0       0.0330        0.0498          0.000003    0.0719   \n",
-       "1422   -11.328     0       0.0348        0.4350          0.000000    0.1660   \n",
-       "5459   -18.619     1       0.0455        0.8420          0.000003    0.1860   \n",
-       "4710    -9.290     1       0.0233        0.7130          0.000061    0.1290   \n",
-       "6714    -6.535     1       0.0260        0.8160          0.000007    0.1150   \n",
+       "       loudness  mode  speechiness  acousticness  instrumentalness  liveness  \\\n",
+       "21182   -14.664     1       0.0515        0.9560          0.000000    0.3300   \n",
+       "16799   -11.109     1       0.0347        0.9250          0.166000    0.1150   \n",
+       "29441    -8.942     0       0.0321        0.0767          0.000553    0.2500   \n",
+       "17800    -9.596     1       0.0259        0.1820          0.000000    0.1250   \n",
+       "23770    -8.092     1       0.0434        0.0699          0.854000    0.0807   \n",
        "\n",
-       "      valence    tempo  duration_ms  time_signature  chorus_hit  sections  \\\n",
-       "1743    0.766  126.015       200280               4    34.91387        10   \n",
-       "1422    0.548  104.822       154187               4    29.96956         7   \n",
-       "5459    0.354  124.847       123693               4    18.66831         7   \n",
-       "4710    0.639   97.363       185493               4    26.10163         9   \n",
-       "6714    0.459   90.318       157267               4    29.29180         9   \n",
+       "       valence    tempo  duration_ms  time_signature  chorus_hit  sections  \\\n",
+       "21182    0.415   99.535       104173               3    43.54332         5   \n",
+       "16799    0.106  179.446       371293               4    33.69942        17   \n",
+       "29441    0.706  129.949       262956               4    50.98220        10   \n",
+       "17800    0.273   78.994       219507               4    59.85929         9   \n",
+       "23770    0.169   84.302       296200               4    13.51356        14   \n",
        "\n",
-       "      target  decade  \n",
-       "1743       1      80  \n",
-       "1422       0      80  \n",
-       "5459       0      70  \n",
-       "4710       1      60  \n",
-       "6714       1      60  "
+       "       target  decade  \n",
+       "21182       0       8  \n",
+       "16799       0       8  \n",
+       "29441       0       0  \n",
+       "17800       0       8  \n",
+       "23770       0       9  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,16 +233,16 @@
     "_10 = pd.read_csv('data/dataset-of-10s.csv')\n",
     "\n",
     "#adding decade columns\n",
-    "_60['decade']=60\n",
-    "_70['decade']=70\n",
-    "_80['decade']=80\n",
-    "_90['decade']=90\n",
-    "_00['decade']=00\n",
-    "_10['decade']=10\n",
+    "_60['decade']=6\n",
+    "_70['decade']=7\n",
+    "_80['decade']=8\n",
+    "_90['decade']=9\n",
+    "_00['decade']=0\n",
+    "_10['decade']=1\n",
     "\n",
     "#combining all in one\n",
     "\n",
-    "df = pd.concat([_60,_70,_80,_90,_00,_10])\n",
+    "df = pd.concat([_60,_70,_80,_90,_00,_10], ignore_index=True)\n",
     "df.sample(5)"
    ]
   }
