--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,162 +63,169 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>21182</th>\n",
-       "      <td>(Hey Ho) The Noddy (Oh)</td>\n",
-       "      <td>Current 93</td>\n",
-       "      <td>spotify:track:69Br4GdsJCP3oyWt5Ihmc3</td>\n",
-       "      <td>0.474</td>\n",
-       "      <td>0.102</td>\n",
-       "      <td>3</td>\n",
-       "      <td>-14.664</td>\n",
+       "      <th>27693</th>\n",
+       "      <td>I Love You So Much It's Killing Us Both</td>\n",
+       "      <td>Jawbreaker</td>\n",
+       "      <td>spotify:track:04TU7mCmyTMwdpjjmTQbGp</td>\n",
+       "      <td>0.206</td>\n",
+       "      <td>0.982</td>\n",
+       "      <td>11</td>\n",
+       "      <td>-5.790</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1230</td>\n",
+       "      <td>0.000222</td>\n",
+       "      <td>0.00319</td>\n",
+       "      <td>0.106</td>\n",
+       "      <td>0.383</td>\n",
+       "      <td>181.927</td>\n",
+       "      <td>171613</td>\n",
+       "      <td>4</td>\n",
+       "      <td>39.18114</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27397</th>\n",
+       "      <td>Love Desire</td>\n",
+       "      <td>Sandee</td>\n",
+       "      <td>spotify:track:64xtbpPovuAlNheWuCtOww</td>\n",
+       "      <td>0.837</td>\n",
+       "      <td>0.549</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-12.576</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0515</td>\n",
-       "      <td>0.9560</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.3300</td>\n",
-       "      <td>0.415</td>\n",
-       "      <td>99.535</td>\n",
-       "      <td>104173</td>\n",
-       "      <td>3</td>\n",
-       "      <td>43.54332</td>\n",
+       "      <td>0.0502</td>\n",
+       "      <td>0.081900</td>\n",
+       "      <td>0.05010</td>\n",
+       "      <td>0.115</td>\n",
+       "      <td>0.707</td>\n",
+       "      <td>106.996</td>\n",
+       "      <td>332493</td>\n",
+       "      <td>4</td>\n",
+       "      <td>36.98556</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13562</th>\n",
+       "      <td>Hobo Blues - Instrumental</td>\n",
+       "      <td>Big Walter Horton</td>\n",
+       "      <td>spotify:track:5x6tP0FKo45SmhbbVjGZxm</td>\n",
+       "      <td>0.538</td>\n",
+       "      <td>0.193</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-16.441</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.2180</td>\n",
+       "      <td>0.984000</td>\n",
+       "      <td>0.02570</td>\n",
+       "      <td>0.182</td>\n",
+       "      <td>0.122</td>\n",
+       "      <td>94.567</td>\n",
+       "      <td>77867</td>\n",
+       "      <td>4</td>\n",
+       "      <td>18.57373</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16799</th>\n",
-       "      <td>The Torture Garden</td>\n",
-       "      <td>Death In June</td>\n",
-       "      <td>spotify:track:6fL8R4ESyfV3dnhk2GOYNS</td>\n",
-       "      <td>0.158</td>\n",
-       "      <td>0.431</td>\n",
-       "      <td>10</td>\n",
-       "      <td>-11.109</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0347</td>\n",
-       "      <td>0.9250</td>\n",
-       "      <td>0.166000</td>\n",
-       "      <td>0.1150</td>\n",
-       "      <td>0.106</td>\n",
-       "      <td>179.446</td>\n",
-       "      <td>371293</td>\n",
-       "      <td>4</td>\n",
-       "      <td>33.69942</td>\n",
-       "      <td>17</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29441</th>\n",
-       "      <td>Kanulu Palikey</td>\n",
-       "      <td>Karthik</td>\n",
-       "      <td>spotify:track:49hiYhUQXEMqkZz031DQHq</td>\n",
-       "      <td>0.754</td>\n",
-       "      <td>0.697</td>\n",
        "      <td>7</td>\n",
-       "      <td>-8.942</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0321</td>\n",
-       "      <td>0.0767</td>\n",
-       "      <td>0.000553</td>\n",
-       "      <td>0.2500</td>\n",
-       "      <td>0.706</td>\n",
-       "      <td>129.949</td>\n",
-       "      <td>262956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29984</th>\n",
+       "      <td>Productive Not Destructive (Demo)</td>\n",
+       "      <td>Nausea</td>\n",
+       "      <td>spotify:track:7vmExoV0iTGtHu8J0UHvT2</td>\n",
+       "      <td>0.293</td>\n",
+       "      <td>0.792</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-9.258</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0479</td>\n",
+       "      <td>0.052600</td>\n",
+       "      <td>0.65600</td>\n",
+       "      <td>0.430</td>\n",
+       "      <td>0.676</td>\n",
+       "      <td>89.014</td>\n",
+       "      <td>112480</td>\n",
        "      <td>4</td>\n",
-       "      <td>50.98220</td>\n",
-       "      <td>10</td>\n",
+       "      <td>27.81571</td>\n",
+       "      <td>6</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17800</th>\n",
-       "      <td>I Told You So</td>\n",
-       "      <td>Randy Travis</td>\n",
-       "      <td>spotify:track:6QUEB3DDAD7oJhbIZF2v4Y</td>\n",
-       "      <td>0.615</td>\n",
-       "      <td>0.347</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-9.596</td>\n",
+       "      <th>2046</th>\n",
+       "      <td>Electricity</td>\n",
+       "      <td>Captain Beefheart &amp; His Magic Band</td>\n",
+       "      <td>spotify:track:0LcfPNErwpUQHoUI2TRS56</td>\n",
+       "      <td>0.534</td>\n",
+       "      <td>0.813</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-7.709</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0259</td>\n",
-       "      <td>0.1820</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.1250</td>\n",
-       "      <td>0.273</td>\n",
-       "      <td>78.994</td>\n",
-       "      <td>219507</td>\n",
+       "      <td>0.0483</td>\n",
+       "      <td>0.062100</td>\n",
+       "      <td>0.30500</td>\n",
+       "      <td>0.168</td>\n",
+       "      <td>0.595</td>\n",
+       "      <td>117.700</td>\n",
+       "      <td>186400</td>\n",
        "      <td>4</td>\n",
-       "      <td>59.85929</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
+       "      <td>34.75967</td>\n",
        "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23770</th>\n",
-       "      <td>Harmageddon</td>\n",
-       "      <td>Apocalyptica</td>\n",
-       "      <td>spotify:track:4mDSLI5UtU0xJoqaqPp1UB</td>\n",
-       "      <td>0.205</td>\n",
-       "      <td>0.581</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-8.092</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0434</td>\n",
-       "      <td>0.0699</td>\n",
-       "      <td>0.854000</td>\n",
-       "      <td>0.0807</td>\n",
-       "      <td>0.169</td>\n",
-       "      <td>84.302</td>\n",
-       "      <td>296200</td>\n",
-       "      <td>4</td>\n",
-       "      <td>13.51356</td>\n",
-       "      <td>14</td>\n",
        "      <td>0</td>\n",
-       "      <td>9</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         track         artist  \\\n",
-       "21182  (Hey Ho) The Noddy (Oh)     Current 93   \n",
-       "16799       The Torture Garden  Death In June   \n",
-       "29441           Kanulu Palikey        Karthik   \n",
-       "17800            I Told You So   Randy Travis   \n",
-       "23770              Harmageddon   Apocalyptica   \n",
+       "                                         track  \\\n",
+       "27693  I Love You So Much It's Killing Us Both   \n",
+       "27397                              Love Desire   \n",
+       "13562                Hobo Blues - Instrumental   \n",
+       "29984        Productive Not Destructive (Demo)   \n",
+       "2046                               Electricity   \n",
+       "\n",
+       "                                   artist  \\\n",
+       "27693                          Jawbreaker   \n",
+       "27397                              Sandee   \n",
+       "13562                   Big Walter Horton   \n",
+       "29984                              Nausea   \n",
+       "2046   Captain Beefheart & His Magic Band   \n",
        "\n",
        "                                        uri  danceability  energy  key  \\\n",
-       "21182  spotify:track:69Br4GdsJCP3oyWt5Ihmc3         0.474   0.102    3   \n",
-       "16799  spotify:track:6fL8R4ESyfV3dnhk2GOYNS         0.158   0.431   10   \n",
-       "29441  spotify:track:49hiYhUQXEMqkZz031DQHq         0.754   0.697    7   \n",
-       "17800  spotify:track:6QUEB3DDAD7oJhbIZF2v4Y         0.615   0.347    9   \n",
-       "23770  spotify:track:4mDSLI5UtU0xJoqaqPp1UB         0.205   0.581    9   \n",
+       "27693  spotify:track:04TU7mCmyTMwdpjjmTQbGp         0.206   0.982   11   \n",
+       "27397  spotify:track:64xtbpPovuAlNheWuCtOww         0.837   0.549    2   \n",
+       "13562  spotify:track:5x6tP0FKo45SmhbbVjGZxm         0.538   0.193    2   \n",
+       "29984  spotify:track:7vmExoV0iTGtHu8J0UHvT2         0.293   0.792    2   \n",
+       "2046   spotify:track:0LcfPNErwpUQHoUI2TRS56         0.534   0.813    7   \n",
        "\n",
        "       loudness  mode  speechiness  acousticness  instrumentalness  liveness  \\\n",
-       "21182   -14.664     1       0.0515        0.9560          0.000000    0.3300   \n",
-       "16799   -11.109     1       0.0347        0.9250          0.166000    0.1150   \n",
-       "29441    -8.942     0       0.0321        0.0767          0.000553    0.2500   \n",
-       "17800    -9.596     1       0.0259        0.1820          0.000000    0.1250   \n",
-       "23770    -8.092     1       0.0434        0.0699          0.854000    0.0807   \n",
+       "27693    -5.790     0       0.1230      0.000222           0.00319     0.106   \n",
+       "27397   -12.576     1       0.0502      0.081900           0.05010     0.115   \n",
+       "13562   -16.441     1       0.2180      0.984000           0.02570     0.182   \n",
+       "29984    -9.258     1       0.0479      0.052600           0.65600     0.430   \n",
+       "2046     -7.709     1       0.0483      0.062100           0.30500     0.168   \n",
        "\n",
        "       valence    tempo  duration_ms  time_signature  chorus_hit  sections  \\\n",
-       "21182    0.415   99.535       104173               3    43.54332         5   \n",
-       "16799    0.106  179.446       371293               4    33.69942        17   \n",
-       "29441    0.706  129.949       262956               4    50.98220        10   \n",
-       "17800    0.273   78.994       219507               4    59.85929         9   \n",
-       "23770    0.169   84.302       296200               4    13.51356        14   \n",
+       "27693    0.383  181.927       171613               4    39.18114         7   \n",
+       "27397    0.707  106.996       332493               4    36.98556        15   \n",
+       "13562    0.122   94.567        77867               4    18.57373         5   \n",
+       "29984    0.676   89.014       112480               4    27.81571         6   \n",
+       "2046     0.595  117.700       186400               4    34.75967         8   \n",
        "\n",
        "       target  decade  \n",
-       "21182       0       8  \n",
-       "16799       0       8  \n",
-       "29441       0       0  \n",
-       "17800       0       8  \n",
-       "23770       0       9  "
+       "27693       0       9  \n",
+       "27397       1       9  \n",
+       "13562       0       7  \n",
+       "29984       0       0  \n",
+       "2046        0       6  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,6 +251,63 @@
     "\n",
     "df = pd.concat([_60,_70,_80,_90,_00,_10], ignore_index=True)\n",
     "df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 41106 entries, 0 to 41105\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   track             41106 non-null  object \n",
+      " 1   artist            41106 non-null  object \n",
+      " 2   uri               41106 non-null  object \n",
+      " 3   danceability      41106 non-null  float64\n",
+      " 4   energy            41106 non-null  float64\n",
+      " 5   key               41106 non-null  int64  \n",
+      " 6   loudness          41106 non-null  float64\n",
+      " 7   mode              41106 non-null  int64  \n",
+      " 8   speechiness       41106 non-null  float64\n",
+      " 9   acousticness      41106 non-null  float64\n",
+      " 10  instrumentalness  41106 non-null  float64\n",
+      " 11  liveness          41106 non-null  float64\n",
+      " 12  valence           41106 non-null  float64\n",
+      " 13  tempo             41106 non-null  float64\n",
+      " 14  duration_ms       41106 non-null  int64  \n",
+      " 15  time_signature    41106 non-null  int64  \n",
+      " 16  chorus_hit        41106 non-null  float64\n",
+      " 17  sections          41106 non-null  int64  \n",
+      " 18  target            41106 non-null  int64  \n",
+      " 19  decade            41106 non-null  int64  \n",
+      "dtypes: float64(10), int64(7), object(3)\n",
+      "memory usage: 6.3+ MB\n",
+      "(41106, 20) None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
+    "    df.shape,\n",
+    "df.info()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_cols =  [feature for feature in df.columns if df[feature].dtypes != \"O\"]\n",
+    "text_cols = "
    ]
   }
  ],
