--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -66,117 +66,117 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>27966</th>\n",
-       "      <td>One Has My Name (The Other Has My Heart)</td>\n",
-       "      <td>Barry Young</td>\n",
-       "      <td>spotify:track:3Vd7lnnD4xihfGIgqNDo9B</td>\n",
-       "      <td>0.514</td>\n",
-       "      <td>0.403</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-14.822</td>\n",
+       "      <th>20671</th>\n",
+       "      <td>Malagueña</td>\n",
+       "      <td>Connie Francis</td>\n",
+       "      <td>spotify:track:7hpa3Bcjt8Or7tC7TtOIcs</td>\n",
+       "      <td>0.297</td>\n",
+       "      <td>0.433</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-9.832</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0295</td>\n",
-       "      <td>0.770000</td>\n",
-       "      <td>0.000011</td>\n",
-       "      <td>0.2320</td>\n",
-       "      <td>0.653</td>\n",
-       "      <td>112.532</td>\n",
-       "      <td>155627</td>\n",
+       "      <td>0.0307</td>\n",
+       "      <td>0.616</td>\n",
+       "      <td>0.000103</td>\n",
+       "      <td>0.7550</td>\n",
+       "      <td>0.2650</td>\n",
+       "      <td>135.914</td>\n",
+       "      <td>183867</td>\n",
        "      <td>4</td>\n",
-       "      <td>21.85376</td>\n",
-       "      <td>7</td>\n",
+       "      <td>33.76421</td>\n",
+       "      <td>9</td>\n",
        "      <td>1</td>\n",
        "      <td>1960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16066</th>\n",
-       "      <td>Hooked</td>\n",
-       "      <td>Dylan Scott</td>\n",
-       "      <td>spotify:track:3DV49ruvI5Sl6iisPZAc2c</td>\n",
-       "      <td>0.597</td>\n",
-       "      <td>0.721</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-6.422</td>\n",
+       "      <th>17984</th>\n",
+       "      <td>Heart</td>\n",
+       "      <td>Kenny Chandler</td>\n",
+       "      <td>spotify:track:3oMyOytWFz0Ydd0GSfpdcW</td>\n",
+       "      <td>0.455</td>\n",
+       "      <td>0.199</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-15.392</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0356</td>\n",
-       "      <td>0.036200</td>\n",
+       "      <td>0.0977</td>\n",
+       "      <td>0.728</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.0832</td>\n",
-       "      <td>0.437</td>\n",
-       "      <td>132.054</td>\n",
-       "      <td>149293</td>\n",
-       "      <td>4</td>\n",
-       "      <td>23.40072</td>\n",
-       "      <td>7</td>\n",
+       "      <td>0.1300</td>\n",
+       "      <td>0.7760</td>\n",
+       "      <td>241.009</td>\n",
+       "      <td>167173</td>\n",
+       "      <td>3</td>\n",
+       "      <td>35.97162</td>\n",
+       "      <td>12</td>\n",
        "      <td>1</td>\n",
-       "      <td>2010</td>\n",
+       "      <td>1960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26983</th>\n",
-       "      <td>Lost</td>\n",
-       "      <td>Beautiful Sin</td>\n",
-       "      <td>spotify:track:2DIAdMEOfWT8LDfCjBBdGb</td>\n",
-       "      <td>0.372</td>\n",
-       "      <td>0.922</td>\n",
+       "      <th>5438</th>\n",
+       "      <td>Folk Dance No 2</td>\n",
+       "      <td>Neil Ardley</td>\n",
+       "      <td>spotify:track:4Moy6hKEfAaQQBIZ2F2vWD</td>\n",
+       "      <td>0.271</td>\n",
+       "      <td>0.535</td>\n",
        "      <td>7</td>\n",
-       "      <td>-3.534</td>\n",
+       "      <td>-13.637</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0485</td>\n",
-       "      <td>0.000156</td>\n",
-       "      <td>0.000360</td>\n",
-       "      <td>0.2600</td>\n",
-       "      <td>0.361</td>\n",
-       "      <td>90.039</td>\n",
-       "      <td>291760</td>\n",
+       "      <td>0.0540</td>\n",
+       "      <td>0.774</td>\n",
+       "      <td>0.779000</td>\n",
+       "      <td>0.1710</td>\n",
+       "      <td>0.4400</td>\n",
+       "      <td>110.778</td>\n",
+       "      <td>270080</td>\n",
        "      <td>4</td>\n",
-       "      <td>21.29234</td>\n",
-       "      <td>15</td>\n",
+       "      <td>22.56889</td>\n",
+       "      <td>12</td>\n",
        "      <td>0</td>\n",
        "      <td>2000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20996</th>\n",
-       "      <td>Bobo's Lament</td>\n",
-       "      <td>Francis Lai</td>\n",
-       "      <td>spotify:track:0D5xR7GBtioF8za610pk6j</td>\n",
-       "      <td>0.363</td>\n",
-       "      <td>0.238</td>\n",
-       "      <td>11</td>\n",
-       "      <td>-12.991</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0325</td>\n",
-       "      <td>0.622000</td>\n",
-       "      <td>0.880000</td>\n",
-       "      <td>0.1270</td>\n",
-       "      <td>0.264</td>\n",
-       "      <td>104.595</td>\n",
-       "      <td>220839</td>\n",
+       "      <th>5412</th>\n",
+       "      <td>In the Nursery</td>\n",
+       "      <td>Johnny Hawksworth</td>\n",
+       "      <td>spotify:track:2dCH6YVcJMDd9AZ1oq10iS</td>\n",
+       "      <td>0.484</td>\n",
+       "      <td>0.265</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-9.746</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0359</td>\n",
+       "      <td>0.571</td>\n",
+       "      <td>0.009020</td>\n",
+       "      <td>0.0571</td>\n",
+       "      <td>0.0394</td>\n",
+       "      <td>129.226</td>\n",
+       "      <td>184560</td>\n",
        "      <td>4</td>\n",
-       "      <td>26.66242</td>\n",
-       "      <td>14</td>\n",
+       "      <td>23.73136</td>\n",
+       "      <td>11</td>\n",
        "      <td>0</td>\n",
        "      <td>1960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33054</th>\n",
-       "      <td>Art House Director</td>\n",
-       "      <td>Broken Social Scene</td>\n",
-       "      <td>spotify:track:5feuZknKlJYGMPvWvKrpwt</td>\n",
-       "      <td>0.464</td>\n",
-       "      <td>0.766</td>\n",
-       "      <td>7</td>\n",
-       "      <td>-5.298</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0410</td>\n",
-       "      <td>0.000122</td>\n",
-       "      <td>0.027500</td>\n",
-       "      <td>0.5440</td>\n",
-       "      <td>0.335</td>\n",
-       "      <td>130.458</td>\n",
-       "      <td>212173</td>\n",
-       "      <td>5</td>\n",
-       "      <td>105.47915</td>\n",
-       "      <td>6</td>\n",
+       "      <th>17330</th>\n",
+       "      <td>All Night (feat. Gunna)</td>\n",
+       "      <td>Jeezy</td>\n",
+       "      <td>spotify:track:3Rq2iOLodAxvQCjua0IKQ7</td>\n",
+       "      <td>0.825</td>\n",
+       "      <td>0.576</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-5.856</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.2910</td>\n",
+       "      <td>0.151</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0961</td>\n",
+       "      <td>0.4930</td>\n",
+       "      <td>80.519</td>\n",
+       "      <td>172987</td>\n",
+       "      <td>4</td>\n",
+       "      <td>32.51548</td>\n",
+       "      <td>9</td>\n",
        "      <td>0</td>\n",
        "      <td>2010</td>\n",
        "    </tr>\n",
@@ -185,40 +185,40 @@
        "</div>"
       ],
       "text/plain": [
-       "                                          track               artist  \\\n",
-       "27966  One Has My Name (The Other Has My Heart)          Barry Young   \n",
-       "16066                                    Hooked          Dylan Scott   \n",
-       "26983                                      Lost        Beautiful Sin   \n",
-       "20996                             Bobo's Lament          Francis Lai   \n",
-       "33054                        Art House Director  Broken Social Scene   \n",
+       "                         track             artist  \\\n",
+       "20671                Malagueña     Connie Francis   \n",
+       "17984                    Heart     Kenny Chandler   \n",
+       "5438           Folk Dance No 2        Neil Ardley   \n",
+       "5412            In the Nursery  Johnny Hawksworth   \n",
+       "17330  All Night (feat. Gunna)              Jeezy   \n",
        "\n",
        "                                        uri  danceability  energy  key  \\\n",
-       "27966  spotify:track:3Vd7lnnD4xihfGIgqNDo9B         0.514   0.403    9   \n",
-       "16066  spotify:track:3DV49ruvI5Sl6iisPZAc2c         0.597   0.721    9   \n",
-       "26983  spotify:track:2DIAdMEOfWT8LDfCjBBdGb         0.372   0.922    7   \n",
-       "20996  spotify:track:0D5xR7GBtioF8za610pk6j         0.363   0.238   11   \n",
-       "33054  spotify:track:5feuZknKlJYGMPvWvKrpwt         0.464   0.766    7   \n",
+       "20671  spotify:track:7hpa3Bcjt8Or7tC7TtOIcs         0.297   0.433    0   \n",
+       "17984  spotify:track:3oMyOytWFz0Ydd0GSfpdcW         0.455   0.199    2   \n",
+       "5438   spotify:track:4Moy6hKEfAaQQBIZ2F2vWD         0.271   0.535    7   \n",
+       "5412   spotify:track:2dCH6YVcJMDd9AZ1oq10iS         0.484   0.265    5   \n",
+       "17330  spotify:track:3Rq2iOLodAxvQCjua0IKQ7         0.825   0.576    9   \n",
        "\n",
        "       loudness  mode  speechiness  acousticness  instrumentalness  liveness  \\\n",
-       "27966   -14.822     1       0.0295      0.770000          0.000011    0.2320   \n",
-       "16066    -6.422     1       0.0356      0.036200          0.000000    0.0832   \n",
-       "26983    -3.534     1       0.0485      0.000156          0.000360    0.2600   \n",
-       "20996   -12.991     0       0.0325      0.622000          0.880000    0.1270   \n",
-       "33054    -5.298     1       0.0410      0.000122          0.027500    0.5440   \n",
+       "20671    -9.832     1       0.0307         0.616          0.000103    0.7550   \n",
+       "17984   -15.392     1       0.0977         0.728          0.000000    0.1300   \n",
+       "5438    -13.637     1       0.0540         0.774          0.779000    0.1710   \n",
+       "5412     -9.746     1       0.0359         0.571          0.009020    0.0571   \n",
+       "17330    -5.856     0       0.2910         0.151          0.000000    0.0961   \n",
        "\n",
        "       valence    tempo  duration_ms  time_signature  chorus_hit  sections  \\\n",
-       "27966    0.653  112.532       155627               4    21.85376         7   \n",
-       "16066    0.437  132.054       149293               4    23.40072         7   \n",
-       "26983    0.361   90.039       291760               4    21.29234        15   \n",
-       "20996    0.264  104.595       220839               4    26.66242        14   \n",
-       "33054    0.335  130.458       212173               5   105.47915         6   \n",
+       "20671   0.2650  135.914       183867               4    33.76421         9   \n",
+       "17984   0.7760  241.009       167173               3    35.97162        12   \n",
+       "5438    0.4400  110.778       270080               4    22.56889        12   \n",
+       "5412    0.0394  129.226       184560               4    23.73136        11   \n",
+       "17330   0.4930   80.519       172987               4    32.51548         9   \n",
        "\n",
        "       target  decade  \n",
-       "27966       1    1960  \n",
-       "16066       1    2010  \n",
-       "26983       0    2000  \n",
-       "20996       0    1960  \n",
-       "33054       0    2010  "
+       "20671       1    1960  \n",
+       "17984       1    1960  \n",
+       "5438        0    2000  \n",
+       "5412        0    1960  \n",
+       "17330       0    2010  "
       ]
      },
      "execution_count": 2,
@@ -238,6 +238,13 @@
     "df = pd.concat(dfs, axis=0).sample(frac=1.0, random_state=1).reset_index(drop=True)\n",
     "\n",
     "df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploratory"
    ]
   },
   {
@@ -569,6 +576,13 @@
    ],
    "source": [
     "df.value_counts('target')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Correlation, Distribution"
    ]
   },
   {
@@ -1536,9 +1550,9 @@
      "text": [
       "Logistic Regression: 73.29%\n",
       "K-Nearest Neighbors: 74.82%\n",
-      "Decision Tree: 71.11%\n",
+      "Decision Tree: 71.14%\n",
       "Support Vector Machine: 79.40%\n",
-      "Random Forest: 80.40%\n",
+      "Random Forest: 80.25%\n",
       "Naive Bayes Gaussian: 70.97%\n"
      ]
     }
